<resources>
    <string name="app_name">Ma première App</string>
    <string name="hello_world">Bonjour monde !</string>
    <string name="offline">Déconnecté</string>
    <string name="vsia">1 VS IA</string>
    <string name="oneVsOne">1 VS 1</string>
    <string name="vsteam">Equipe VS Equipe</string>
    <string name="online">Connecté</string>
    <string name="oneVsOneOnline">1 VS 1 En ligne</string>
    <string name="team">Equipe : B</string>
    <string name="life">Vie : 3</string>
    <string name="player">Joueur : Sacha</string>
    <string name="score">Score :18</string>
    <string name="question">De quel animal est ce cri ?</string>
    <string name="value">Valeur : 5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="detail">Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="alcohol">Alcool</string>
    <string name="description">Description</string>
    <string name="loading">Chargement...</string>
</resources>
