<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="fr.polytech.quizz.quizz.ui.MainActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
                android:layout_width="0dp"
                android:layout_height="162dp"
                android:id="@+id/imageView" android:layout_marginRight="32dp"
                app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="32dp"
                app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"/>
        <TextView
                android:text="@string/detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/detail"
                android:layout_marginLeft="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:textAppearance="@android:style/TextAppearance.Material.Title" android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp" android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/tagline"/>
        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" android:textAlignment="center" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/tagline" android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:textStyle="italic" android:textAlignment="center"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp" app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="32dp" app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/detail" app:layout_constraintHorizontal_bias="0.0">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/tv_label_alcohol"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginLeft="0dp"
                    app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintRight_toLeftOf="@+id/tv_alcohol"
                    android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"
                    android:text="@string/alcohol"/>
            <TextView
                    android:layout_width="184dp"
                    android:layout_height="wrap_content" android:id="@+id/tv_alcohol"
                    android:layout_marginRight="16dp"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="@string/alcohol" android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textStyle="bold" app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_alcohol"
                    tools:layout_editor_absoluteY="8dp"/>


            <TextView
                    android:id="@+id/tv_label_description"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginLeft="0dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/tv_description"
                    android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_alcohol" android:layout_width="0dp"
                    android:layout_height="wrap_content" android:text="@string/description"/>
            <TextView
                    android:layout_width="184dp"
                    android:layout_height="wrap_content" android:id="@+id/tv_description"
                    tools:text="@string/alcohol" android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_description" android:layout_marginRight="16dp"
                    app:layout_constraintRight_toRightOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>


